samples/_failures_safe/1761594369_7f0567_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_29e2c9b8.c: In function ‘tokenize’:
./samples/SAFE/__tmp_29e2c9b8.c:169:9: error: expected expression at end of input
  169 |         if (
      |         ^~
./samples/SAFE/__tmp_29e2c9b8.c:169:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_29e2c9b8.c:169:9: error: expected declaration or statement at end of input
